--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
     <title>Login page</title>
 </head>
 <body>
@@ -15,7 +15,7 @@
             <label for="password">Password</label>
             <input type="text" name="" id="password">
         </form>
-
     </main>
 </body>
+<script src="assets/js/script.js"></script>
 </html>
