--- a/src/index.html
+++ b/src/index.html
@@ -9,11 +9,11 @@
 <body>
     <main>
         <h2>Login</h2>
-        <form action="">
+        <form>
             <label for="username">Username</label>
-            <input type="text" name="" id="username">
+            <input type="text" id="username">
             <label for="password">Password</label>
-            <input type="text" name="" id="password">
+            <input type="text" id="password">
         </form>
     </main>
 </body>
