wip: add minimal validation and messages for above the divs

--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,7 @@
             <input type="text" id="username">
             <label for="password">Password</label>
             <input type="text" id="password">
+            <button type="submit">Send</button>
         </form>
     </main>
 </body>
