wip: add checkbox to form

--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,7 @@
                     <div class="forgot-password-div">
                         <div class="remember-me-div">
                             Remember me
-                            <input type="checkbox" />
+                            <input type="checkbox" id="remember-me-check" />
                         </div>
                         <a href="#">Forgot password?</a>
                     </div>
