--- a/src/assets/pages/forgot-password/send-code.html
+++ b/src/assets/pages/forgot-password/send-code.html
@@ -3,9 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../../css/forgot-password.css">
     <title>Send code</title>
 </head>
 <body>
-    
+    <main>
+        <h2>Forgot Password</h2>
+        <div class="forgot-password-round-div">
+
+        </div>
+
+        <form action="#">
+            <label for="email">Email</label>
+            <input type="email"  id="email" />
+            <button type="submit">Send</button>
+        </form>
+    </main>
 </body>
 </html>
