--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Sign up page</title>
 </head>
@@ -37,7 +38,7 @@
                             Remember me
                             <input type="checkbox" id="remember-me-check" />
                         </div>
-                        <a href="#">Forgot password?</a>
+                        <a href="./assets/pages/forgot-password/send-code.html">Forgot password?</a>
                     </div>
                 </div>
                 
