wip: building forgot password layout

--- a/src/assets/pages/forgot-password/send-code.html
+++ b/src/assets/pages/forgot-password/send-code.html
@@ -8,14 +8,15 @@
 </head>
 <body>
     <main>
-        <h2>Forgot Password</h2>
         <div class="forgot-password-round-div">
 
         </div>
 
+        <h2>Please enter your email address to ricieve a verification code.</h2>
+
         <form action="#">
-            <label for="email">Email</label>
-            <input type="email"  id="email" />
+                <label for="email">Email</label>
+                <input type="email"  id="email" />
             <button type="submit">Send</button>
         </form>
     </main>
