wip: more progress in forgotpassword page

--- a/src/assets/pages/forgot-password/send-code.html
+++ b/src/assets/pages/forgot-password/send-code.html
@@ -9,10 +9,10 @@
 <body>
     <main>
         <div class="forgot-password-round-div">
-
+            a
         </div>
 
-        <h2>Please enter your email address to ricieve a verification code.</h2>
+        <h2 class="title">Please enter your email address to ricieve a verification code.</h2>
 
         <form action="#">
                 <label for="email">Email</label>
