--- a/src/assets/pages/forgot-password/send-code.html
+++ b/src/assets/pages/forgot-password/send-code.html
@@ -3,22 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../../css/forgot-password.css">
+    <link rel="stylesheet" href="../../css/send-code.css">
     <title>Send code</title>
 </head>
 <body>
     <main>
         <div class="forgot-password-round-div">
-            a
+            <img class="vital-essence-logo" src="../../img/vital-essence-logo.png" width="200" height="200"/>
         </div>
 
         <h2 class="title">Please enter your email address to ricieve a verification code.</h2>
 
         <form action="#">
                 <label for="email">Email</label>
-                <input type="email"  id="email" />
+                <input type="text"  id="email" />
             <button type="submit">Send</button>
         </form>
     </main>
+    <script src="../../js/send-code.js"></script>
 </body>
 </html>
