chore: forgot password (send code) page completed

--- a/src/assets/pages/forgot-password/send-code.html
+++ b/src/assets/pages/forgot-password/send-code.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <main>
-        <div class="forgot-password-round-div">
-            <img class="vital-essence-logo" src="../../img/vital-essence-logo.png" width="200" height="200"/>
+        <div class="vital-essence-logo-div">
+            <img src="../../img/vital-essence-logo.png" />
         </div>
 
         <h2 class="title">Please enter your email address to ricieve a verification code.</h2>
