--- a/web/src/index.html
+++ b/web/src/index.html
@@ -15,8 +15,11 @@
     <div class="container">
         <div class="aside-container">
             <aside>
-                <div class="aside-into-container">
-                    a
+                <div class="swiper">
+                  <div class="swiper-slide">Slide 1</div>
+                  <div class="swiper-slide">Slide 2</div>
+                  <div class="swiper-slide">Slide 3</div>
+                  <div class="swiper-slide">Slide 4</div>
                 </div>
             </aside>
         </div>
