--- a/web/src/index.html
+++ b/web/src/index.html
@@ -15,8 +15,10 @@
     <div class="container">
         <div class="aside-container">
             <aside>
-                <div class="aside-into-container">
-                    a
+                <div class="swiper">
+                    <div class="swiper-slide">Slide 1</div>
+                    <div class="swiper-slide">Slide 2</div>
+                    <div class="swiper-slide">Slide 3</div> 
                 </div>
             </aside>
         </div>
@@ -66,6 +68,11 @@
 <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js">
     import Swiper from 'https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.mjs'
 
-  const swiper = new Swiper();
+  const swiper = new Swiper(".swiper", {
+    direction: "vertical",
+    pagination: {
+        el: ".swiper-pagination"
+    }
+  });
 </script>
 </html>
