--- a/web/src/index.html
+++ b/web/src/index.html
@@ -68,7 +68,7 @@
 <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js">
     import Swiper from 'https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.mjs'
 
-  const swiper = new Swiper(".swiper", {
+  const swiper = new Swiper(".swiper", {~
     direction: "vertical",
     pagination: {
         el: ".swiper-pagination"
