wip: missing details on frontend and connect front to back

--- a/web/src/assets/pages/forgot-password/send-code.html
+++ b/web/src/assets/pages/forgot-password/send-code.html
@@ -14,7 +14,7 @@
 
         <h2 class="title">Please enter your email address to ricieve a verification code.</h2>
 
-        <form action="#">
+        <form action="./put-code.html" class="send-code-form">
                 <label for="email">Email</label>
                 <input type="text"  id="email" />
             <button type="submit">Send</button>
