--- a/web/src/assets/pages/forgot-password/put-code.html
+++ b/web/src/assets/pages/forgot-password/put-code.html
@@ -18,5 +18,6 @@
             <button type="submit">Send</button>
         </form>
     </main>
+    <script src="../../js/put-code.js"></script>
 </body>
 </html>
